# c64gotd

./: .env.example  .eslintignore 2  .eslintrc 2.cjs  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  jest.config.cjs  jest.config.js  jest.config.mjs  jest.unit.config.cjs  next.config.mjs  nginx.conf  package-lock.json  package.json  simple.html  tailwind.config.js  test.html  tsconfig.json  tsconfig.tsbuildinfo  vite-env.d.ts  vite.config.ts
__tests__/: Home.test.tsx  emulatorManager.test.ts  gameCatalog.test.ts  gameCatalogStore.test.ts  gameHistoryStore.test.ts  gameManager.integration.test.ts
backend/: .dockerignore  .env.dev  .env.prod  Dockerfile  __init__.py  db.py  db.sqlite3  games.db  games_data.py  main.py  models.py  pyproject.toml  test_main.py
backend/api/: games.py  ratings.py
backend/model/: __init__.py  game_info.py  ratings.py
backend/tests/: __init__.py  test_main.py  test_ratings.py
backend/utils/: ratings.py
frontend/: .env.dev  .env.prod  .eslintignore  Dockerfile  index.html  jest.config.cjs  nginx.conf  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
public/: styles.css
scripts/: deploy-backend.sh  deploy-frontend.sh  entrypoint.localstack.sh  generate-thumbnails.js  s3-cors.json  upload-games-to-localstack.sh
src/: app.ts  gameManager.ts  gameManager.ts.bak  main.ts
terraform/: .terraform.lock.hcl  alb.tf  cloudfront.tf  ec2.tf  ecr.tf  ecs.tf  iam.tf  logs.tf  main.tf  outputs.tf  route53.tf  s3.tf  terraform.tfstate  variables.tf  (+1 more)
(+45 files in other folders)
