[project]
name = "c64gotd-backend"
version = "0.1.0"
description = "Backend API for C64 Game of the Day using FastAPI, Pydantic, and SQLite."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.1",
    "uvicorn>=0.30.1",
    "sqlite-utils>=3.36",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.8"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["backend"]

[project.scripts]
c64gotd-backend = "backend.main:app"

[tool.uv]
